# skfio

./: .gitignore  README.md  fitting.py  models.py  parsing.py  problem.py  setup.cfg
src/skfio/: fitting.py  models.py  parsing.py  problem.py  skf.py
