[metadata]
name = skfio
version = 0.0
author = Ahmad W. Huran
author_email = ahmad.houran@gmail.com
description = skf io
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
url = https://github.com/AhmadHuran/skfio 
project_urls =
    Bug Tracker = https://github.com/AhmadHuran/skfio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
